# unsupervised-fraud-detection

./: .gitignore  README.md  pyproject.toml
data/: README.md  simdata.py  view_random_n_rows.sh
data/analysis/: explore_data.py  view_random_n_rows.sh
data/input/: simdata.csv
feature_eng/: README.md  __init__.py  create_train_data.py
feature_eng/sql_scripts/: person_proportion_transactions_this_time_of_day.py
models/: config.py  dist_to_dst_clust_median.py  dist_to_src_clust_median.py  evaluate.py  explain_prediction.py  isolation_forest.py  local_outlier_factor.py
models/feature_eng/: create_train_data.py
models/predictions/: isolation_forest.csv
models/train_predict/: dist_to_dst_clust_median.py  dist_to_src_clust_median.py  isolation_forest.py  local_outlier_factor.py
