[tool.poetry]
name = "unsupervised-fraud-detection"
version = "0.0.0"
description = "Examples of various unsupervised models for detection of transaction fraud"
authors = ["J-sephB-lt-n <joseph.jazz.bolton@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.2"
duckdb = "^0.10.2"
pandas = "^2.2.2"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pylint = "^3.1.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
